Ajout de login module guard pour controler les acces au différent modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<dc-header></dc-header>
-<router-outlet></router-outlet>
+<dc-header *ngIf="connected"></dc-header>
 
-    
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <!-- <dc-footer></dc-footer> -->
