--- a/src/app/shared/components/place-auto-compile/place-auto-compile.component.html
+++ b/src/app/shared/components/place-auto-compile/place-auto-compile.component.html
@@ -1,1 +1,1 @@
-<input type="text" class="form-control" [ngbTypeahead]="search" [resultFormatter]="formatter"/>
+<input type="text" class="form-control" [ngbTypeahead]="search" [resultFormatter]="formatter" [inputFormatter]="formatter"/>
