modification du template event dans le calendrier en prenant en compte le color du chauffeur pour distinguer les courses et en affichant le infos de client et l'heure de départ et l'adresse de départ

--- a/src/app/modules/driver-calendar/components/calendar/calendar.component.html
+++ b/src/app/modules/driver-calendar/components/calendar/calendar.component.html
@@ -8,23 +8,82 @@
   </div>
 </ng-template>
 
+<ng-template #customEvent let-dayEvent="dayEvent">
+  <div class="cal-cell-top">
+    <span>{{dayEvent.event.meta.status |json}}</span>
+  </div>
+</ng-template>
+
+<ng-template #title let-event="event">
+      <div class="container text-dark">
+          <div class="row">
+            <span><small><i class="far fa-clock mr-2 "></i> {{event.meta.departureDate|date: 'shortTime'}}</small></span>
+          </div>
+          <div class="row w-25">
+            <span><i class="far fa-user mr-2"></i>{{event.meta.customer.firstName+' '+event.meta.customer.phoneNumber}}</span>
+          </div>
+          <div class="row">
+              <span class="text-truncate mr-2">
+                <i class="fas fa-map-marker-alt mr-2"></i>{{event.meta.arrivalAddress.description}}
+              </span>
+          </div>
+      </div>
+</ng-template>
+<ng-template #customCellTemplate let-day="day" let-locale="locale">
+    <div class="cal-cell-top">
+      <span class="cal-day-badge" *ngIf="day.badgeTotal > 0">{{ day.badgeTotal }}</span>
+      <span class="cal-day-number">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
+    </div>
+    <div class="cell-totals">
+      <span
+        *ngFor="let group of day.eventGroups"
+        [style.background-color]="group[1][0].color.secondary"
+        class="badge">
+        {{ group[1].length }}
+      </span>
+    </div>
+  </ng-template>
+
+<!-- <ng-template #customCellTemplate let-day="day" let-locale="locale">
+
+  <div class="cal-cell-top">
+    <span>{{day | json }}</span>
+    <span class="cal-day-badge" *ngIf="day.badgeTotal > 0">{{ day.badgeTotal }}</span>
+    <span class="cal-day-number">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
+  </div>
+  <small style="margin: 5px">There are {{ day.events.length }} events on this day</small>
+</ng-template> -->
+
+
 <div class="m-2" *ngIf="events$ | async; else loading; let events">
   <div [ngSwitch]="view">
-    <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events" [activeDayIsOpen]="activeDayIsOpen"
-      (dayClicked)="dayClicked($event.day)" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
+    <mwl-calendar-month-view *ngSwitchCase="'month'" 
+      [viewDate]="viewDate" 
+      [events]="events" 
+      (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)" 
+      (dayClicked)="viewDate = $event.day.date; view = 'day'"
+      [cellTemplate]="customCellTemplate"
+      (beforeViewRender)="beforeMonthViewRender($event)"
+      >
     </mwl-calendar-month-view>
     <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events" (eventClicked)="handleEvent('Clicked', $event.event)"
-      (eventTimesChanged)="eventTimesChanged($event)">
+      (eventTimesChanged)="eventTimesChanged($event)" (dayHeaderClicked)="viewDate = $event.day.date; view = 'day'">
     </mwl-calendar-week-view>
-    <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" (eventClicked)="handleEvent('Clicked', $event.event)"
-      (eventTimesChanged)="eventTimesChanged($event)">
+    <mwl-calendar-day-view *ngSwitchCase="'day'" 
+      [viewDate]="viewDate" 
+      [events]="events" 
+      (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)" 
+      [eventTitleTemplate]="title"
+      [hourSegments]="4">
     </mwl-calendar-day-view>
   </div>
 </div>
 
 
 <h3>
-  <a class="btn btn-primary pull-right" [routerLink]="['./ride/create']" routerLinkActive >
+  <a class="btn btn-primary pull-right" [routerLink]="['./ride/create']" routerLinkActive>
     Add new
   </a>
 </h3>
