--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Driver Calendar</a>
+  <a class="navbar-brand" [routerLink]="">Driver Calendar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -14,7 +14,7 @@
           Administration
         </a>
         <div class="dropdown-menu" [class.show]="showAdminSubMenu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" [routerLink]="['/admin/user']" routerLinkActive="router-link-active" >Utilisateurs</a>
+          <a class="dropdown-item" [routerLink]="['/admin/user']" routerLinkActive="router-link-active" (click)="showAdminMenu()">Utilisateurs</a>
           <!-- <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a> -->
