--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row justify-content-center">
+<div class="container position-relative">
+  <div class="row justify-content-center position-absolute" style="margin-top:20%;">
     <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
       <div class="form-group">
         <label for="email">Email address</label>
