--- a/src/app/modules/admin/user/user-detail/user-detail.component.html
+++ b/src/app/modules/admin/user/user-detail/user-detail.component.html
@@ -78,6 +78,12 @@
     </ng-select>
   </div>
 
+  <div class="form-group">
+    <label for="ID_Color">Color</label>
+    <input type="color" class="form-control col-4" [formControl]="userForm.controls.color" value="#ffffff" id="ID_Color" >
+
+  </div>
+
   <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid" (click)="createUser()"> Save user </button>
   <button type="submit" class="btn btn-primary" (click)="deleteUser()">Delete user </button>
 
