--- a/src/app/modules/admin/user/user-list/user-list.component.html
+++ b/src/app/modules/admin/user/user-list/user-list.component.html
@@ -1,16 +1,16 @@
-
 <div class="row">
-   <button type="submit" class="btn btn-primary"  (click)="createNewUser()">Create New User</button>
+  <button type="submit" class="btn btn-primary" (click)="createNewUser()">Create New User</button>
 </div>
-<table class="table table-hover" mat-table [dataSource]="users$" class="mat-elevation-z8">
+<div class="mat-elevation-z8">
+  <table class="table table-hover" mat-table [dataSource]="users$" class="mat-elevation-z8">
 
-  <ng-container *ngFor="let column of _tableTemplate" matColumnDef="{{column.key}}" onabort="">
-    <th mat-header-cell *matHeaderCellDef> {{column.title}}</th>
-    <td mat-cell *matCellDef="let user"> {{user[column.key]}} </td>
-  </ng-container>
+    <ng-container *ngFor="let column of _tableTemplate" matColumnDef="{{column.key}}" onabort="">
+      <th mat-header-cell *matHeaderCellDef> {{column.title}}</th>
+      <td mat-cell *matCellDef="let user"> {{user[column.key]}} </td>
+    </ng-container>
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let user; columns: displayedColumns;" (click)="showUser(user.id)" ></tr>
-</table>
-
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let user; columns: displayedColumns;" (click)="showUser(user.id)"></tr>
+  </table>
+</div>
