--- a/src/app/modules/driver-calendar/components/calendar/calendar.component.sass
+++ b/src/app/modules/driver-calendar/components/calendar/calendar.component.sass
@@ -4,3 +4,16 @@ h3
 pre 
   background-color: #f5f5f5
   padding: 15px
+
+.cell-totals 
+  margin: 5px
+  text-align: center
+.badge 
+  margin-right: 5pxs
+
+@function set-event-text-color($color) 
+  @if (lightness($color) > 50) 
+    @return #000000; // Lighter backgorund, return dark color
+  @else 
+    @return #ffffff; // Darker background, return light color
+
