--- a/src/app/modules/admin/user/user-list/user-list.component.sass
+++ b/src/app/modules/admin/user/user-list/user-list.component.sass
@@ -3,3 +3,12 @@
 .mat-table
     @extend .table
     @extend .table-striped
+
+.mat-elevation-z8 
+   background-color: #bac8d4
+table 
+    @extend .table-bordered
+
+th 
+    border-bottom-color: red
+    border-bottom-widt: 3px
