--- a/src/app/modules/driver-calendar/components/calendar/calendar.component.sass
+++ b/src/app/modules/driver-calendar/components/calendar/calendar.component.sass
@@ -9,11 +9,11 @@ pre
   margin: 5px
   text-align: center
 .badge 
-  margin-right: 5pxs
+  margin-right: 5px
 
-@function set-event-text-color($color) 
-  @if (lightness($color) > 50) 
-    @return #000000; // Lighter backgorund, return dark color
-  @else 
-    @return #ffffff; // Darker background, return light color
+.dc-container-calendar
+  background-color: white
 
+.btn 
+  &.button-float-right
+    width: 2em
