--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,23 +1,41 @@
-<div class="container position-relative">
-  <div class="row justify-content-center position-absolute" style="margin-top:20%;">
-    <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email" [formControl]="loginForm.controls['email']">
+  <div class="row align-items-center d-flex h-100">
+    <div class="card text-center my-auto">
+      <div class="card-body">
+        <h5 class="card-title">SIGN IN</h5>
+        <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
+
+          <!-- Email-->
+          <div class="form-group">
+
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"><i class="fas fa-at"></i></div>
+              </div>
+              <input type="email" id="INPUT_EMAIL" class="form-control" id="inlineFormInputGroup" placeholder="Email"
+                formControlName="email">
+            </div>
+          </div>
+
+          <!-- password -->
+          <div class="form-group">
+
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"><i class="fas fa-unlock-alt"></i></div>
+              </div>
+              <input type="password" id="INPUT_EMAIL" class="form-control" id="inlineFormInputGroup" placeholder="password"
+                formControlName="password">
+            </div>
+          </div>
+
+          <div *ngIf=" loginForm.controls['email'].touched && loginForm.controls['password'].touched && !loginForm.valid "
+            class="alert alert-danger" role="alert">
+            email and password are required
+          </div>
+
+          <button type="submit" id='login' class="btn btn-primary"><i class="fas fa-sign-in-alt"></i></button>
+
+        </form>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" id="password" placeholder="Password" [formControl]="loginForm.controls['password']">
-      </div>
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="checkOut">Check me out</label>
-      </div>
-      <div *ngIf=" loginForm.controls['email'].touched && loginForm.controls['password'].touched && !loginForm.valid " class="alert alert-danger"
-        role="alert">
-        email and password are required
-      </div>
-      <button type="submit" id='login' class="btn btn-primary">Submit</button>
-    </form>
+    </div>
   </div>
-</div>
