--- a/src/app/modules/admin/user/user-detail/user-detail.component.html
+++ b/src/app/modules/admin/user/user-detail/user-detail.component.html
@@ -1,90 +1,97 @@
-<form *ngIf="userForm" [formGroup]="userForm">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="ID_INPUT_FIRST_NAME">First name</label>
-      <input type="text" class="form-control" formControlName="firstName" id="ID_INPUT_FIRST_NAME" placeholder="First Name">
-      <div *ngIf="userForm.get('firstName').invalid && (userForm.get('firstName').dirty || userForm.get('firstName').touched)"
-        class="alert alert-danger">
-        <div *ngIf="userForm.get('firstName').hasError('required')">
-          Name is required.
+<div class="card">
+  <div class="card-body">
+    <form *ngIf="userForm" [formGroup]="userForm" class="was-validated" novalidate>
+      <!-- fisrt name  & last name-->
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <input type="text" class="form-control" 
+            formControlName="firstName" 
+            id="ID_INPUT_FIRST_NAME" 
+            placeholder="First Name">
+          <div  class="invalid-feedback"
+          *ngIf="userForm.get('firstName').invalid && (userForm.get('firstName').dirty || userForm.get('firstName').touched)">
+            <div *ngIf="userForm.get('firstName').hasError('required')">
+              Name is required.
+            </div>
+            <div *ngIf="userForm.get('firstName').hasError('minlength')">
+              Name must be at least 4 characters long.
+            </div>
+          </div>
         </div>
-        <div *ngIf="userForm.get('firstName').hasError('minlength')">
-          Name must be at least 4 characters long.
-        </div>
-      </div>
-    </div>
-    <div class="invalid-feedback">
-      You must agree before submitting.
-    </div>
-    <div class="form-group col-md-6">
-      <label for="ID_INPUT_LAST_NAME">Last name</label>
-      <input type="text" class="form-control" formControlName="lastName" id="ID_INPUT_LAST_NAME" placeholder="Last Name">
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="ID_INPUT_EMAIL">Email</label>
-      <input type="email" formControlName='email' id="ID_INPUT_EMAIL" class="form-control" placeholder="Email">
-      <div *ngIf="userForm.get('email').invalid && (userForm.get('email').dirty || userForm.get('email').touched)" class="alert alert-danger">
-        <div *ngIf="userForm.get('email').hasError('required')">
-          email is required.
-        </div>
-        <div *ngIf="userForm.get('email').hasError('emailExists')">
-          costumer with this email exist
-        </div>
-        <div *ngIf="userForm.get('email').hasError('email')">
-          check email format
+        <div class="form-group col-md-6">
+          <input type="text" class="form-control" formControlName="lastName" id="ID_INPUT_LAST_NAME" placeholder="Last Name">
         </div>
       </div>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="ID_INPUT_PWD">Password</label>
-      <input type="password" formControlName="password" class="form-control" id="ID_INPUT_PWD" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="ID_INPUT_PHONE">PHONE Number</label>
-      <input type="tel" formControlName="phoneNumber" id="ID_INPUT_PHONE" class="form-control" placeholder="+33....">
-      <div *ngIf="userForm.get('phoneNumber').invalid && (userForm.get('phoneNumber').dirty || userForm.get('phoneNumber').touched)"
-        class="alert alert-danger">
-        <div *ngIf="userForm.get('phoneNumber').hasError('required')">
-          phone number is required.
+      <!-- email -->
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <input type="email" formControlName='email' id="ID_INPUT_EMAIL" class="form-control" placeholder="Email">
+          <div  class="invalid-feedback"
+            *ngIf="userForm.get('email').invalid && (userForm.get('email').dirty || userForm.get('email').touched)"
+          >
+            <div *ngIf="userForm.get('email').hasError('required')">
+              email is required.
+            </div>
+            <div *ngIf="userForm.get('email').hasError('emailExists')">
+              costumer with this email exist
+            </div>
+            <div *ngIf="userForm.get('email').hasError('email')">
+              check email format
+            </div>
+          </div>
         </div>
-        <div *ngIf="userForm.get('phoneNumber').hasError('phoneNumberExists')">
-          costumer with this phone number exists (click)
+        <div class="form-group col-md-6">
+          <input type="password" formControlName="password" class="form-control" id="ID_INPUT_PWD" placeholder="Password">
         </div>
       </div>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="ID_INPUT_SECURTY_NUM">Social Security Number</label>
-      <input type="number" formControlName="socialSecurityNumber" class="form-control" id="ID_INPUT_SECURTY_NUM" placeholder="social Security Number">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="ID_INPUT_ADDRESS">Address</label>
-    <input type="text" class="form-control" [formControl]="userForm.controls.address" id="ID_INPUT_ADDRESS" placeholder="1234 Main St" [ngbTypeahead]="searchAdress" [resultFormatter]="formatter" placeholder="1 rue ...., 57000, metz" [inputFormatter]="formatter" >
-  </div>
-  <div class="form-group">
-    <label for="ID_INPUT_ADDRESS">Roles</label>
-    <ng-select [items]="roles$ | async" bindLabel="label" appendTo="body"  labelForId="roles_id" [multiple]="true"
-      placeholder="Select differents roles for user" clearAllText="Clear" formControlName="roles">
-    </ng-select>
-  </div>
-  <div class="form-group">
-    <label for="ID_INPUT_ADDRESS">Rights</label>
-    <ng-select [items]="rights$ | async" bindLabel="label" appendTo="body"  labelForId="rights_ids" [multiple]="true"
-      placeholder="Select differents rights for user" clearAllText="Clear" formControlName="rights">
-    </ng-select>
-  </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <input type="tel" formControlName="phoneNumber" id="ID_INPUT_PHONE" class="form-control" placeholder="+33....">
+          <div *ngIf="userForm.get('phoneNumber').invalid && (userForm.get('phoneNumber').dirty || userForm.get('phoneNumber').touched)"
+            class="invalid-feedback">
+            <div *ngIf="userForm.get('phoneNumber').hasError('required')">
+              phone number is required.
+            </div>
+            <div *ngIf="userForm.get('phoneNumber').hasError('phoneNumberExists')">
+              costumer with this phone number exists (click)
+            </div>
+          </div>
+        </div>
+        <div class="form-group col-md-6">
+          <input type="number" formControlName="socialSecurityNumber" class="form-control" id="ID_INPUT_SECURTY_NUM"
+            placeholder="social Security Number">
+        </div>
+      </div>
+      <div class="form-group">
+        <input type="text" class="form-control" formControlName="address" id="ID_INPUT_ADDRESS" [ngbTypeahead]="searchAdress"
+          [resultFormatter]="formatter" placeholder="1 rue ...., 57000, metz" [inputFormatter]="formatter">
+      </div>
+      <div class="form-group">
+        <ng-select [items]="roles$ | async" bindLabel="label" appendTo="body" labelForId="roles_id" [multiple]="true"
+          placeholder="Select differents roles for user" clearAllText="Clear" formControlName="roles">
+        </ng-select>
+        <div *ngIf="userForm.get('roles').invalid && (userForm.get('roles').dirty || userForm.get('roles').touched)"
+            class="invalid-feedback">
+            <div *ngIf="userForm.get('roles').hasError('required')">
+                choose at least one role
+            </div>
+          </div>
+      </div>
 
-  <div class="form-group">
-    <label for="ID_Color">Color</label>
-    <input type="color" class="form-control col-4" [formControl]="userForm.controls.color" value="#ffffff" id="ID_Color" >
+      <div class="form-group">
+        <ng-select [items]="rights$ | async" bindLabel="label" appendTo="body" labelForId="rights_ids" [multiple]="true"
+          placeholder="Select differents rights for user" clearAllText="Clear" formControlName="rights">
+        </ng-select>
+      </div>
 
+      <div class="form-group">
+        <input type="color" class="form-control col-4" [formControl]="userForm.controls.color" value="#ffffff" id="ID_Color">
+      </div>
+
+      <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid" (click)="createUser()"> Save user
+      </button>
+      <button type="submit" class="btn btn-primary" (click)="deleteUser()">Delete user </button>
+
+    </form>
   </div>
-
-  <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid" (click)="createUser()"> Save user </button>
-  <button type="submit" class="btn btn-primary" (click)="deleteUser()">Delete user </button>
-
-</form>
+</div>
