mise à jour de theme nettoyage du code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <dc-header *ngIf="connected"></dc-header>
 
 <div class="container">
+    <notification></notification>
     <router-outlet></router-outlet>
 </div>
-<!-- <dc-footer></dc-footer> -->
