--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,41 +1,46 @@
-  <div class="row align-items-center d-flex h-100">
-    <div class="card text-center my-auto">
-      <div class="card-body">
-        <h5 class="card-title">SIGN IN</h5>
-        <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
+<div class="row m-3">
+  <div class="card my-auto">
+    <div class="card-body">
+      <h5 class="card-title text-center">Connectez-Vous</h5>
+      <form class="was-validated" [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)" novalidate>
 
-          <!-- Email-->
-          <div class="form-group">
+        <!-- Email-->
+        <div class="form-group">
 
-            <div class="input-group mb-2">
-              <div class="input-group-prepend">
-                <div class="input-group-text"><i class="fas fa-at"></i></div>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fas fa-at"></i></div>
+            </div>
+            <input type="email" id="INPUT_EMAIL" class="form-control" id="inlineFormInputGroup" placeholder="Email"
+              formControlName="email" required>
+            <div class="invalid-feedback" *ngIf="loginForm.get('email').invalid && (loginForm.get('email').dirty || loginForm.get('email').touched)">
+              <div *ngIf="loginForm.get('email').hasError('required')">
+                Email est obligatoire
               </div>
-              <input type="email" id="INPUT_EMAIL" class="form-control" id="inlineFormInputGroup" placeholder="Email"
-                formControlName="email">
+            </div>
+          </div>
+        </div>
+
+        <!-- password -->
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fas fa-unlock-alt"></i></div>
+            </div>
+            <input type="password" id="INPUT_PWD" class="form-control" id="inlineFormInputGroup" placeholder="mot de passe"
+              formControlName="password" required>
+            <div class="invalid-feedback" *ngIf="loginForm.get('password').invalid && (loginForm.get('password').dirty || loginForm.get('password').touched)">
+              <div *ngIf="loginForm.get('password').hasError('required')">
+                Mot de passe est obligatoire
+              </div>
             </div>
           </div>
 
-          <!-- password -->
-          <div class="form-group">
+        </div>
 
-            <div class="input-group mb-2">
-              <div class="input-group-prepend">
-                <div class="input-group-text"><i class="fas fa-unlock-alt"></i></div>
-              </div>
-              <input type="password" id="INPUT_EMAIL" class="form-control" id="inlineFormInputGroup" placeholder="password"
-                formControlName="password">
-            </div>
-          </div>
+        <button type="submit" id='login' class="btn btn-primary"><i class="fas fa-sign-in-alt"></i></button>
 
-          <div *ngIf=" loginForm.controls['email'].touched && loginForm.controls['password'].touched && !loginForm.valid "
-            class="alert alert-danger" role="alert">
-            email and password are required
-          </div>
-
-          <button type="submit" id='login' class="btn btn-primary"><i class="fas fa-sign-in-alt"></i></button>
-
-        </form>
-      </div>
+      </form>
     </div>
   </div>
+</div>
